[package]
name = "spl-associated-token-account"
version = "1.0.4"
description = "Solana Program Library Associated Token Account"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
solana-program = { git = "https://github.com/zgendao/solana.git", tag = "v1.9.0-zgen" }#"1.8.1"
spl-token = { path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
